# DiscordClockin

./: .gitignore  .gitlab-ci.yml  AGENTS.md  README.md  docker-compose.yml  package-lock.json  run_services.sh
DiscordBots/: AGENTS.md  docker-compose.yml
DiscordBots/Holiday Segritude/: AGENTS.md  config.json  example.env  package-lock.json  package.json
DiscordBots/Report Segritude/: AGENTS.md  Dockerfile  package-lock.json  package.json
DiscordBots/clockin/: AGENTS.md  addTestData.js  config.json  directory_structure.json  example.env  folderStructure.js  (+7 more)
Report Segritude/: .dockerignore  config.json  package.json
backend/: AGENTS.md  Cargo.toml  example.env
backend/src/: config.rs  error.rs  events.rs  logging.rs  main.rs  state.rs
backend/src/models/: guild_worker.rs  roles.rs  views.rs
backend/src/repository/: mod.rs  mongo.rs  sqlite.rs
backend/src/routes/: mod.rs
backend/src/routes/v1/: admin.rs  departments.rs  events.rs  health.rs  mod.rs  profile.rs  roles.rs  settings.rs  shifts.rs  timesheets.rs  workers.rs  workers_admin.rs
clockin/: Dockerfile  addTestData.js  deploy.sh  example.env  index.js  log.js  package.json
clockin/backend/: Cargo.toml
clockin/backend/src/: config.rs  error.rs  main.rs  state.rs
clockin/backend/src/models/: clockins.rs  guild_worker.rs  mod.rs  settings.rs  views.rs
clockin/backend/src/routes/v1/: mod.rs  shifts.rs  timesheets.rs  workers.rs
frontend/: README.md  app.js  config.example.js  config.example.ts  config.js  config.ts  index.html  package-lock.json  package.json  styles.css  tsconfig.json
(+372 files in other folders)
