[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.9.0"
actix-cors = "0.7.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
dotenvy = "0.15"
config = "0.14"
env_logger = "0.11"
log = "0.4"
uuid = { version = "1", features = ["v4"] }
thiserror = "1.0"
mongodb = "3.1"
chrono = { version = "0.4", features = ["serde"] }
serde_with = "3.11"
async-trait = "0.1"
tokio-rusqlite = "0.5"
rusqlite = "0.31"
